--- a/systemDesingnDataMaker.html
+++ b/systemDesingnDataMaker.html
@@ -218,6 +218,19 @@ function buildingF()
 //('4','admin','admin')
 }
 buildingF();
+
+function dayF()
+{
+  Day=Day.concat('('+'\''+0+'\''+','+'\''+ "monday"+'\''+')');
+  Day=Day.concat('('+'\''+1+'\''+','+'\''+ "tuesday"+'\''+')');
+  Day=Day.concat('('+'\''+2+'\''+','+'\''+ "wensday"+'\''+')');
+  Day=Day.concat('('+'\''+3+'\''+','+'\''+ "thursday"+'\''+')');
+  Day=Day.concat('('+'\''+4+'\''+','+'\''+ "friday"+'\''+')');
+  Day=Day.concat('('+'\''+5+'\''+','+'\''+ "saturday"+'\''+')');
+  Day=Day.concat('('+'\''+6+'\''+','+'\''+ "sunday"+'\''+')');
+}
+dayF()
+
 function departmentNameF()
 {
   var departmentNameIn= [
