--- a/systemDesingnDataMaker.html
+++ b/systemDesingnDataMaker.html
@@ -827,7 +827,7 @@ createUserF()
 
 
 
-document.write("login");//
+document.write("insert in login");//
 document.write(login);
 document.write("user");//
 document.write(user);
@@ -897,7 +897,7 @@ document.write('Coursee');//
 document.write(Course);
 document.write('Prerequisitexxx');
 document.write(Prerequisite);
-document.write('TimeSlott');//TimeSlot and TimeSlotPeriod seem link they can be one
+document.write('TimeSlott');//TimeSlot and TimeSlotPeriod seem like they can be one
 document.write(timeSlot);
 document.write('TimeSlotPeriod');
 document.write(TimeSlotPeriod);
